Freedom Sanbox Ant Deploy/src/objects/Workstation__c.object
<CustomObject>
    <fields>
        <fullName>Advisory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Financial adviser of FP</description>
        <label>Advisory</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Workstations6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Business_Developer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Developer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Workstations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Compliance__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Compliance</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Workstations1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Financial_Planner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Financial Planner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Workstations2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Workstations3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Member_Engagement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Member Engagement</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Workstations4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Operations__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Operations</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Workstations (Operations)</relationshipLabel>
        <relationshipName>Workstations7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tech__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tech</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Workstations5</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Workstation</label>
    <nameField>
        <displayFormat>WS-{0000}</displayFormat>
        <label>Workstation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Workstations</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>